27_matrix_input/grade.txt
Grading at Thu Apr 11 20:10:06 UTC 2019
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘clearMatrix’:
rotateMatrix.c:34:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     matrix[i] = NULL;
               ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
